Inclusçao de comandos no readme

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "updateLibrary": "npm install",
     "deleteResults": "rm results/* || true",
     "deleteScreenshots": "rm cypress/screenshots/** || true",
-    "cy.open": "cypress open",
+    "cy:open": "cypress open",
     "cy:run": "cypress run --config video=false",
     "test": "npm run deleteResults && npm run deleteScreenshots && npm run cy:run"
   },
